# cuda_event_benchmark

./: CMakeLists.txt  README.md  event_bench.cpp
cmake/Modules/: ConfigureGoogleBenchmark.cmake
cmake/Templates/: GoogleBenchmark.CMakeLists.txt.cmake
